--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>《天道轮回:我的修仙梦》 隐私保护协议</title>
+    <title>《天道轮回：我的修仙梦》 隐私保护协议</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <h1>《天道轮回:我的修仙梦》 隐私保护协议</h1>
+    <h1>《天道轮回：我的修仙梦》 隐私保护协议</h1>
     <p>更新日期: 2022年9月15日</p>
     <p>生效日期: 2022年9月15日</p>
     <p>欢迎您选择由 Kaka Ku Games Inc. 游戏工作室（以下简称“我们”。有关个人信息保护的联系方式为：1301876937@qq.com）提供的游戏！除《用户服务协议》外，我们还将通过《隐私保护协议》（“本协议”）向您进一步细化说明您在使游戏时我们收集、使用、存储和共享个人信息的情况，以及您所享有的相关权利等事宜，本协议是《游戏用户服务协议》的组成部分，其中要点如下：</p>
