--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -48,6 +48,22 @@
 
     <h2>5.信息安全</h2>
     <p>a)在使用本软件网络服务进行网上交易时，您不可避免的要向交易对方或潜在的交易对方披露自己的个人信息，如联络方式或者邮政地址。请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。如您发现自己的个人信息泄密，请您立即联络本软件客服，以便本软件采取相应措施。</p>
+
+    <h2>6.第三方产品或服务如何获得您的个人信息 </h2>
+    <p>为了向您提供更丰富和完整的功能，我们可能会使用下述第三方软件开发工具包（简称“SDK”）为您提供服务。SDK的具体信息收集和使用情况请以SDK运营方的隐私政策或相关声明为准。SDK明细如下：
+    使用SDK名称：TapSDK
+    服务类型：实名认证、防沉迷认证
+    收集个人信息类型：网络设备制造商、系统版本、读写存储权限
+    隐私权政策链接：https://developer.taptap.cn/docs/sdk/start/agreement/
+    使用SDK名称：Unity3D SDK
+    服务类型：应用开发、统计设备信息
+    收集个人信息类型： OAID、MAC地址、IP地址、软件安装列表、Android_ ID、IDFA、IDFV、已安装APP信息
+    隐私权政策链接：https://unity.cn/legal/china-privacy-policy
+    使用SDK名称：穿山甲广告SDK
+    服务类型：提供广告服务 
+    收集个人信息类型：设备品牌、型号、软件系统版本、屏幕密度、屏幕分辨率、设备语言、设备时区、sim卡信息（mcc&mnc）、CPU信息、可用存储空间大小等基础信息、AndroidID、OAID、手机系统重启时间、磁盘总空间、系统总内存空间、IDFV、设备MAC地址、设备标识符（如IMEI、IMSI、ICCID、GAID（仅GMS服务）、MEID、硬件序列号build_serial（具体字段因软硬件版本不同而存在差异）、设备标识符（如IDFA，具体字段因软硬件版本不同而存在差异）、应用安装列表、IP地址
+    隐私权政策链接：https://www.csjplatform.com/privacy</p>
+
 </body>
 
 </html>
