--- a/ys_ziyourensheng.html
+++ b/ys_ziyourensheng.html
@@ -53,7 +53,7 @@
     <p>为了向您提供更丰富和完整的功能，我们可能会使用下述第三方软件开发工具包（简称“SDK”）为您提供服务。SDK的具体信息收集和使用情况请以SDK运营方的隐私政策或相关声明为准。SDK明细如下：</p>
     <p>使用SDK名称：TapSDK</p>
     <p>服务类型：实名认证、防沉迷认证</p>
-    <p>收集个人信息类型：网络设备制造商、系统版本、读写存储权限</p>
+    <p>收集个人信息类型：网络设备制造商、系统版本、读写存储权限、Android ID、OAID</p>
     <p>隐私权政策链接：https://developer.taptap.cn/docs/sdk/start/agreement/</p>
     <p>使用SDK名称：Unity3D SDK</p>
     <p>服务类型：应用开发、统计设备信息</p>
@@ -61,9 +61,13 @@
     <p>隐私权政策链接：https://unity.cn/legal/china-privacy-policy</p>
     <p>使用SDK名称：穿山甲广告SDK</p>
     <p>服务类型：提供广告服务 </p>
-    <p>收集个人信息类型：设备品牌、型号、软件系统版本、屏幕密度、屏幕分辨率、设备语言、设备时区、sim卡信息（mcc&mnc）、CPU信息、可用存储空间大小等基础信息、AndroidID、OAID、手机系统重启时间、磁盘总空间、系统总内存空间、IDFV、设备MAC地址、设备标识符（如IMEI、IMSI、ICCID、GAID（仅GMS服务）、MEID、硬件序列号build_serial（具体字段因软硬件版本不同而存在差异）、设备标识符（如IDFA，具体字段因软硬件版本不同而存在差异）、应用安装列表、IP地址</p>
+    <p>收集个人信息类型：设备品牌、型号、软件系统版本、屏幕密度、屏幕分辨率、设备语言、设备时区、sim卡信息（mcc&mnc）、CPU信息、可用存储空间大小等基础信息、AndroidID、OAID、手机系统重启时间、磁盘总空间、系统总内存空间、IDFV、设备MAC地址、设备标识符（如IMEI、IMSI、ICCID、GAID（仅GMS服务）、MEID、硬件序列号build_serial（具体字段因软硬件版本不同而存在差异）、设备标识符（如IDFA，具体字段因软硬件版本不同而存在差异）、应用安装列表、IP地址、设备传感器信息</p>
     <p>隐私权政策链接：https://www.csjplatform.com/privacy</p>
 
+    <p>使用SDK名称：优量汇广告SDK</p>
+    <p>服务类型：提供广告服务 </p>
+    <p>收集个人信息类型：设备品牌、型号、软件系统版本、屏幕密度、屏幕分辨率、设备语言、设备时区、sim卡信息（mcc&mnc）、CPU信息、可用存储空间大小等基础信息、AndroidID、OAID、手机系统重启时间、磁盘总空间、系统总内存空间、IDFV、设备MAC地址、设备标识符（如IMEI、IMSI、ICCID、GAID（仅GMS服务）、MEID、硬件序列号build_serial（具体字段因软硬件版本不同而存在差异）、设备标识符（如IDFA，具体字段因软硬件版本不同而存在差异）、应用安装列表、IP地址、设备传感器信息</p>
+    <p>隐私权政策链接：https://www.csjplatform.com/privacy</p>
 </body>
 
 </html>
