--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -52,8 +52,8 @@
     <h2>6.第三方产品或服务如何获得您的个人信息 </h2>
     <p>为了向您提供更丰富和完整的功能，我们可能会使用下述第三方软件开发工具包（简称“SDK”）为您提供服务。SDK的具体信息收集和使用情况请以SDK运营方的隐私政策或相关声明为准。SDK明细如下：</p>
     <p>使用SDK名称：TapSDK</p>
-    <p>服务类型：实名认证、防沉迷认证、Android ID、OAID</p>
-    <p>收集个人信息类型：网络设备制造商、系统版本、读写存储权限</p>
+    <p>服务类型：实名认证、防沉迷认证</p>
+    <p>收集个人信息类型：网络设备制造商、系统版本、读写存储权限、Android ID、OAID</p>
     <p>隐私权政策链接：https://developer.taptap.cn/docs/sdk/start/agreement/</p>
     <p>使用SDK名称：Unity3D SDK</p>
     <p>服务类型：应用开发、统计设备信息</p>
